[package]
authors = ["EP <eupn@protonmail.com>"]
categories = ["embedded", "no-std"]
description = "A SiLabs EMlib bindings for Happy Gecko MCU (EFM32HG222F64)"
keywords = [ "embedded", "arm", "cortex-m0", "no-std", "ffi" ]
license = "MIT OR Apache-2.0"
name = "emlib"
repository = "https://github.com/eupn/emlib"
version = "0.0.1"

[build-dependencies]
cc = "*"

[dependencies.cortex-m-rt]
version = "0.6.12"
